[package]
name = "recurring-thread"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "recurring_thread"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
clockwork-sdk = { version = "~2.0.1" }
anchor-spl = "0.26.0"
solana-program = "~1.13.2"
winnow = "=0.4.1"
arrayref = "0.3.6"

